Fix alignment issue

--- a/src/components/ui/PlanDetailsTable/index.scss
+++ b/src/components/ui/PlanDetailsTable/index.scss
@@ -46,8 +46,11 @@
       @media screen and (min-width: 320px) and (max-width: 480px) {
         width: 100% !important;
       }
+      td {
+        width: calc(70% / 3);
+      }
       td:first-child {
-        width: 40%;
+        width: 30%;
       }
       @media screen and (min-width: 320px) and (max-width: 480px) {
         td:first-child {
@@ -213,6 +216,7 @@
   height: 48px;
   width: 100%;
   border-top: 1px solid #dddddd;
+  background-color: white;
   cursor: pointer;
 
   .show-more-cost-label {
@@ -225,21 +229,39 @@
 }
 
 .cost-monthly-past {
+  background-color: white;
+
   .cost-monthly-bar {
-    display: flex;
-    align-items: center;
-    text-align: center;
-    justify-content: space-between;
-    flex-direction: row;
     width: 100%;
-    height: 40px;
-    padding-left: 16px;
-    padding-right: 16px;
     color: #717171;
+    display: flex;
+    font-weight: bold;
+    height: 100%;
+    border: 1px solid #cbd5e1;
+    border-bottom: none;
+    border-top: none;
 
     .date {
       font-style: italic;
       font-size: 14px;
+      font-weight: normal;
+      padding-left: 5px;
+    }
+
+    .compare-cost-month-container {
+      width: 30%;
+      padding: 10px 0;
+      padding-left: 35px;
+    }
+
+    .cost-monthly-bar-item {
+      text-align: right;
+      width: calc(70% / 3);
+      color: #717171;
+      font-weight: bold;
+      padding: 10px 0;
+      padding-right: 8px;
+      border-left: 1px solid #cbd5e1;
     }
   }
 }
@@ -312,8 +334,7 @@
       width: 100%;
       height: 40px;
       border: 1px solid #cbd5e1;
-      padding-left: 16px;
-      padding-right: 16px;
+      background-color: white;
       cursor: pointer;
 
       .cost-phases {
@@ -347,11 +368,22 @@
         align-items: center;
         text-align: center;
         justify-content: flex-start;
-        width: 40%;
+        width: 30%;
+        padding-left: 15px;
 
         div {
           padding-left: 10px;
         }
+      }
+
+      .cost-monthly-header-item {
+        display: flex;
+        width: calc(70% / 3);
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 8px;
+        border-left: 1px solid #cbd5e1;
+        height: 100%;
       }
 
       .cost-arrow-side {
@@ -369,7 +401,7 @@
     .cost-monthly-content {
       display: none;
       background-color: #f1faff;
-      padding: 16px 48px 0 24px;
+
       .cost-monthly-thead {
         height: 28px;
         border-bottom: 1px solid #cbd5e1;
@@ -381,7 +413,7 @@
             font-family: Lato;
             font-size: 14px;
             letter-spacing: -0.14px;
-            padding-left: 0;
+            padding-left: 20px;
             padding-right: 10px;
             border-right: 1px solid #cbd5e1;
           }
@@ -401,22 +433,28 @@
         tr {
           height: 28px;
           border-bottom: 1px solid #cbd5e1;
+
           td {
-            padding-left: 0;
+            padding-left: 20px;
             padding-right: 10px;
+            padding-bottom: 5px;
             border-right: 1px solid #cbd5e1;
             color: #717171;
           }
+
           td:last-child {
             border-right: unset;
           }
+
           td:not(:first-child) {
             text-align: end;
           }
         }
+
         tr:nth-child(even) {
           background-color: #f1faff;
         }
+
         tr:last-child {
           td:first-child div {
             display: flex;
